more junk code added

--- a/Junk_Code.ipynb
+++ b/Junk_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjWsx1WjZ0BfDOh3VS6xA7",
+      "authorship_tag": "ABX9TyNekohTzkY+NwFvESqf5/Dw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,6 +92,52 @@
         "fetch_bioassay_results(5330175)\n",
         "'''"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#code for using the PUG API in pubchem:\n",
+        "\n",
+        "'''\n",
+        "import requests\n",
+        "\n",
+        "def fetch_and_download_csv(cid):\n",
+        "    # Update the CSV URL you identified\n",
+        "    csv_url = f\"https://pubchem.ncbi.nlm.nih.gov/rest/pug/compound/cid/{cid}/bioassay/csv\"\n",
+        "\n",
+        "    # Fetch the CSV file\n",
+        "    try:\n",
+        "        response = requests.get(csv_url)\n",
+        "        if response.status_code == 200:\n",
+        "            # Save the CSV file locally\n",
+        "            file_name = f\"bioassay_results_{cid}.csv\"\n",
+        "            with open(file_name, \"wb\") as file:\n",
+        "                file.write(response.content)\n",
+        "            print(f\"CSV file downloaded successfully as {file_name}\")\n",
+        "        else:\n",
+        "            print(f\"Failed to fetch the CSV file. Status code: {response.status_code}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"An error occurred: {e}\")\n",
+        "\n",
+        "# Example usage\n",
+        "fetch_and_download_csv(5330175)\n",
+        "\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "ZpDI53FRgqBg"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1dcS9aTVguIa"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
