--- a/Junk_Code.ipynb
+++ b/Junk_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNekohTzkY+NwFvESqf5/Dw",
+      "authorship_tag": "ABX9TyMHO7eYQR8bY7gdWdeJrIXm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,12 +127,46 @@
       "metadata": {
         "id": "ZpDI53FRgqBg"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#give example from the bioessay_dict with the first entry\n",
+        "#order -> view object -> list of tuples -> every tuple is (str, list of str)\n",
+        "tuple_61 = list(bioessay_dict.items())[61]\n",
+        "print(tuple_61[0])\n",
+        "print(tuple_61[1])\n",
+        "#check how many elements are there in the value which is a list\n",
+        "print(len(list(bioessay_dict.values())[61]))\n",
+        "#also drop the values that are similar only keep the unique ones in the list\n",
+        "print(len(set(list(bioessay_dict.values())[61])))\n",
+        "print(list(set(list(bioessay_dict.values())[61])))"
+      ],
+      "metadata": {
+        "id": "zUJIeUTSeRXh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#When you iterate over a dictionary directly (e.g., for key in bioessay_dict), Python defaults to iterating over the dictionary's keys.\n",
+        "#The __iter__ method of a dictionary returns an iterator over the keys. (built in defualt)\n",
+        "\n",
+        "# Create a new dictionary with updated keys\n",
+        "updated_bioessay_dict = {}\n",
+        "for key in bioessay_dict:\n",
+        "    new_key = key.replace('.csv', '')  # Remove .csv from the key\n",
+        "    updated_bioessay_dict[new_key] = bioessay_dict[key]  # Assign the value to the new key\n",
+        "\n",
+        "# Replace the old dictionary with the updated one\n",
+        "bioessay_dict = updated_bioessay_dict\n",
+        "\n",
+        "print(bioessay_dict.keys())"
+      ],
       "metadata": {
         "id": "1dcS9aTVguIa"
       },
