--- a/Pubchem_Downloader_Phase_one.ipynb
+++ b/Pubchem_Downloader_Phase_one.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1nUqLK5WqiMEJ2_o0rqC1OA5E4Fb_ets2",
-      "authorship_tag": "ABX9TyO/Ai/vnuceQroZLG17Bo+k",
+      "authorship_tag": "ABX9TyNxL5cqZkHi8dqURFqG7Bui",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 1,
       "metadata": {
         "id": "kKc8xF3T8SiS"
       },
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "lo_Nt5Pu0Mqw"
       },
-      "execution_count": 56,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
       "metadata": {
         "id": "nJ7j4Egg0RDv"
       },
-      "execution_count": 57,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "lgCThy304TL8"
       },
-      "execution_count": 58,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -92,9 +92,9 @@
           "height": 458
         },
         "id": "wtZ9uV3471_1",
-        "outputId": "dc2bbb21-e4a6-4e15-ce07-025bf07519da"
+        "outputId": "747d73bc-da9c-470f-9172-47e9da87b844"
       },
-      "execution_count": 59,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +187,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 5
         }
       ]
     },
@@ -224,13 +224,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "f4rQ_LG433Lr",
-        "outputId": "f06ac9d4-658c-496c-e5f4-512ac6c43db3"
+        "outputId": "a29bd301-5e47-4176-cef8-468dc11f7a13"
       },
-      "execution_count": 60,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,12 +258,11 @@
       "metadata": {
         "id": "SXfO_BjWciH4",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd46045a-e1d1-4a1a-f296-88a73f1cde45"
+        "outputId": "3e6c09cf-db60-4f31-e4ee-ecb02d0ac36d"
       },
-      "execution_count": 61,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,12 +336,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Biological Essay Code:"
+      ],
+      "metadata": {
+        "id": "amxPTCsnwy3b"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "'''\n",
         "Next step is to download the ids biological test results csv files from pubchem website\n",
         "We tried to use the PUG API but it wasnt downloading the correct files so we did it manually\n",
-        "'''\n",
+        "\n",
         "\n",
         "#folder to save the csv files in:\n",
         "folder_path = '/content/drive/MyDrive/IDS_Target_Result'\n",
@@ -369,25 +376,142 @@
         "        else:\n",
         "            print(f\"Failed to retrieve bioassay data for CID {cid}. HTTP Status Code: {response.status_code}\")\n",
         "\n",
-        "\n"
+        "'''\n"
       ],
       "metadata": {
         "id": "zJ39h15r9cVd"
       },
-      "execution_count": 62,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Interaction and Pathways:"
+      ],
+      "metadata": {
+        "id": "P8hTZMtcw-aP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fetch_pathways_results(pathway_ids, folder_path):\n",
+        "  # Ensure the folder exists\n",
+        "    os.makedirs(folder_path, exist_ok=True)\n",
+        "    for cid in pubchem_ids:\n",
+        "        # The url, using f-string formatting -> same for all the files\n",
+        "        url = f\"https://pubchem.ncbi.nlm.nih.gov/sdq/sdqagent.cgi?infmt=json&outfmt=csv&query={{\\\"download\\\":\\\"*\\\",\\\"collection\\\":\\\"pdb\\\",\\\"order\\\":[\\\"resolution,asc\\\"],\\\"start\\\":1,\\\"limit\\\":10000000,\\\"downloadfilename\\\":\\\"pubchem_cid_{cid}_pdb\\\",\\\"where\\\":{{\\\"ands\\\":[{{\\\"cid\\\":\\\"{cid}\\\"}}]}}}}\"\n",
+        "\n",
+        "        # Send a GET request to the API\n",
+        "        response = requests.get(url)\n",
+        "\n",
+        "        # Check if the request was successful\n",
+        "        if response.status_code == 200:\n",
+        "            # Define the file path\n",
+        "            file_path = os.path.join(folder_path, f\"{cid}.csv\")\n",
+        "            # Write the content to a CSV file\n",
+        "            with open(file_path, 'wb') as file:\n",
+        "                file.write(response.content)\n",
+        "            print(f\"Pathways data for CID {cid} has been downloaded and saved to {file_path}\")\n",
+        "        else:\n",
+        "            print(f\"Failed to retrieve pathways data for CID {cid}. HTTP Status Code: {response.status_code}\")\n"
+      ],
+      "metadata": {
+        "id": "NxLy4KS2xDhL"
+      },
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#uncomment if you need to download the ids targets\n",
-        "#fetch_bioassay_results(pubchem_ids , folder_path)"
+        "#fetch_bioassay_results(pubchem_ids , folder_path)\n",
+        "\n",
+        "folder_path_interaction = '/content/drive/MyDrive/IDS_Target_Result_Interaction'\n",
+        "#uncomment if you need to download the ids targets\n",
+        "fetch_pathways_results(pubchem_ids , folder_path_interaction)\n"
       ],
       "metadata": {
-        "id": "vHJoOjZTcO9y"
+        "id": "vHJoOjZTcO9y",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "63cfcbfc-284f-4e20-e815-7dd872a633b7"
       },
-      "execution_count": 63,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pathways data for CID 5330175 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/5330175.csv\n",
+            "Pathways data for CID 5311340 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/5311340.csv\n",
+            "Pathways data for CID 11511120 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/11511120.csv\n",
+            "Pathways data for CID 221354 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/221354.csv\n",
+            "Pathways data for CID 6806409 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/6806409.csv\n",
+            "Pathways data for CID 5329480 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/5329480.csv\n",
+            "Pathways data for CID 12947 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/12947.csv\n",
+            "Pathways data for CID 444810 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/444810.csv\n",
+            "Pathways data for CID 135421339 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/135421339.csv\n",
+            "Pathways data for CID 9939609 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/9939609.csv\n",
+            "Pathways data for CID 42627755 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/42627755.csv\n",
+            "Pathways data for CID 53464483 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/53464483.csv\n",
+            "Pathways data for CID 3647519 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/3647519.csv\n",
+            "Pathways data for CID 9810709 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/9810709.csv\n",
+            "Pathways data for CID 6413301 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/6413301.csv\n",
+            "Pathways data for CID 119081415 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/119081415.csv\n",
+            "Pathways data for CID 5311382 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/5311382.csv\n",
+            "Pathways data for CID 53315868 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/53315868.csv\n",
+            "Pathways data for CID 10219 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/10219.csv\n",
+            "Pathways data for CID 9914412 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/9914412.csv\n",
+            "Pathways data for CID 2993 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/2993.csv\n",
+            "Pathways data for CID 24756910 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/24756910.csv\n",
+            "Pathways data for CID 6918097 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/6918097.csv\n",
+            "Pathways data for CID 4534086 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/4534086.csv\n",
+            "Pathways data for CID 73416445 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/73416445.csv\n",
+            "Pathways data for CID 132928 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/132928.csv\n",
+            "Pathways data for CID 5281035 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/5281035.csv\n",
+            "Pathways data for CID 121750 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/121750.csv\n",
+            "Pathways data for CID 9852185 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/9852185.csv\n",
+            "Pathways data for CID 51000408 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/51000408.csv\n",
+            "Pathways data for CID 73602827 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/73602827.csv\n",
+            "Pathways data for CID 3499 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/3499.csv\n",
+            "Pathways data for CID 9809926 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/9809926.csv\n",
+            "Pathways data for CID 41867 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/41867.csv\n",
+            "Pathways data for CID 6918837 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/6918837.csv\n",
+            "Pathways data for CID 24858111 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/24858111.csv\n",
+            "Pathways data for CID 33630 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/33630.csv\n",
+            "Pathways data for CID 2798 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/2798.csv\n",
+            "Pathways data for CID 441074 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/441074.csv\n",
+            "Pathways data for CID 4735 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/4735.csv\n",
+            "Pathways data for CID 3034034 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/3034034.csv\n",
+            "Pathways data for CID 676352 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/676352.csv\n",
+            "Pathways data for CID 49855250 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/49855250.csv\n",
+            "Pathways data for CID 154257 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/154257.csv\n",
+            "Pathways data for CID 24795070 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/24795070.csv\n",
+            "Pathways data for CID 11978790 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/11978790.csv\n",
+            "Pathways data for CID 439530 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/439530.csv\n",
+            "Pathways data for CID 6445562 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/6445562.csv\n",
+            "Pathways data for CID 9829526 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/9829526.csv\n",
+            "Pathways data for CID 5583 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/5583.csv\n",
+            "Pathways data for CID 446536 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/446536.csv\n",
+            "Pathways data for CID 46848036 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/46848036.csv\n",
+            "Pathways data for CID 9549305 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/9549305.csv\n",
+            "Pathways data for CID 25150857 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/25150857.csv\n",
+            "Pathways data for CID 53315882 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/53315882.csv\n",
+            "Pathways data for CID 6197 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/6197.csv\n",
+            "Pathways data for CID 51358113 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/51358113.csv\n",
+            "Pathways data for CID 16007391 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/16007391.csv\n",
+            "Pathways data for CID 9829836 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/9829836.csv\n",
+            "Pathways data for CID 51031035 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/51031035.csv\n",
+            "Pathways data for CID 452192 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/452192.csv\n",
+            "Pathways data for CID 30323 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/30323.csv\n",
+            "Pathways data for CID 11785878 has been downloaded and saved to /content/drive/MyDrive/IDS_Target_Result_Interaction/11785878.csv\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -402,28 +526,25 @@
       "cell_type": "code",
       "source": [
         "#open csv and get the column names\n",
-        "new_df = pd.read_csv('/content/drive/MyDrive/IDS_Target_Result/10219.csv')\n",
+        "new_df = pd.read_csv('/content/drive/MyDrive/IDS_Target_Result_Interaction/10219.csv')\n",
         "print(new_df.columns)"
       ],
       "metadata": {
         "id": "hSteAljbfVQX",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ad7d9919-7158-479c-f398-f488ca704997"
+        "outputId": "ad74ad8f-2b78-416b-a3b4-f7e8983912c6"
       },
-      "execution_count": 115,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Index([' baid', 'acvalue', 'aid', 'sid', 'cid', 'geneid', 'pmid', 'aidtype',\n",
-            "       'aidmdate', 'hasdrc', 'rnai', 'activity', 'protacxn', 'acname',\n",
-            "       'acqualifier', 'aidsrcname', 'aidname', 'cmpdname', 'targetname',\n",
-            "       'targeturl', 'ecs', 'repacxn', 'taxid', 'cellids', 'targettaxid',\n",
-            "       'anatomyid', 'anatomy', 'dois', 'pmcids', 'pclids', 'citations'],\n",
+            "Index(['resolution', 'pdbid', 'title', 'expmethod', 'lignme', 'glytoucan',\n",
+            "       'cids', 'protacxns', 'geneids', 'pmid', 'dois', 'pmcids', 'pclids',\n",
+            "       'citations'],\n",
             "      dtype='object')\n"
           ]
         }
@@ -468,7 +589,7 @@
         },
         "outputId": "d27bd404-532c-435b-cc59-882d158a891b"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5654,7 +5775,7 @@
       "metadata": {
         "id": "ysok5brMpEJr"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5681,7 +5802,7 @@
         "id": "PEUfA6CCw-JT",
         "outputId": "7c04f9b2-a1f7-4eab-82c3-9cb60cdf8bae"
       },
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5717,7 +5838,7 @@
         "id": "UCkDsMe8zKqS",
         "outputId": "514c8947-11ed-449e-e001-b034194ba4ef"
       },
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10354,7 +10475,7 @@
         "id": "sLaDONXK1nGK",
         "outputId": "2cfaf1d1-3775-462a-9cb3-18066ff3fe1e"
       },
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
